@@ -7,6 +7,8 @@ documents those changes that are of interest to users and admins.
  - mpi/mvapich: Add support for MVAPICH protocol version 6.
  - In sched/wiki2, change "JOBMODIFY" command to "MODIFYJOB".
  - For sched/wiki2, permit normal user to specify arbitrary job id.
+ - In sched/wiki2, set buffer pointer to NULL after free() to avoid 
+   possible memory corruption.
 
 * Changes in SLURM 1.1.23
 =========================
